<resources>
    <string name="app_name">Android_City_Hunter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">City Hunter</string>
    <string name="nav_header_subtitle">Sport at ease</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="txt_username">Username</string>
    <string name="app_logo_description">App logo</string>
    <string name="edt_username">Username</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="app_video_description">app video</string>
    <string name="sign_up">Sign Up</string>
    <string name="back_button">Back Button</string>
    <string name="close">Close</string>
    <string name="choose_an_avatar">Choose an avatar</string>
    <string name="ava_male_des">logo male</string>
    <string name="ava_female_des">Ava girl</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_logout">Logout</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="submit_text">Submit</string>
    <string name="nav_txt_account">Account</string>
    <string name="nav_open">Open Navigation</string>
    <string name="nav_close">Close Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>