<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/activity"
            android:icon="@drawable/human_running"
            android:title="@string/menu_activity" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/human"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>