<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/app_login_background">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/app_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/app_logo_description" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/txt_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo"
        android:background="@drawable/top_rounded_rectangle">

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:text="Login"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/txt_login_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please login to continue"
            app:layout_constraintTop_toBottomOf="@+id/txt_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="18sp"
            android:alpha="0.7"/>

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_username"
            app:layout_constraintTop_toBottomOf="@+id/txt_login_des"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            />


        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/rounded_rectangle"
            app:layout_constraintTop_toBottomOf="@+id/txt_username"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginHorizontal="25dp"
            android:hint="@string/edt_username"
            android:paddingHorizontal="20dp"
            android:autofillHints="username"
            android:layout_marginTop="10dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            app:layout_constraintTop_toBottomOf="@+id/edt_username"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/rounded_rectangle"
            app:layout_constraintTop_toBottomOf="@+id/txt_password"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginHorizontal="25dp"
            android:hint="Password"
            android:paddingHorizontal="20dp"
            android:autofillHints="Password"
            android:layout_marginTop="10dp"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="25dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/edt_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_rectangle"
            android:text="@string/let_s_go"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="5dp"
            android:text="@string/sign_up"
            android:background="#0000"
            android:textSize="16sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>