<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include android:id="@+id/toolbar" layout="@layout/fragment_toolbar"/>

    <TextView
        android:id="@+id/user_avatar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_an_avatar"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_avatar_male"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:contentDescription="@string/ava_male_des"
        app:cardCornerRadius="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/card_avatar_female"
        app:cardBackgroundColor="@color/light_green"
        app:layout_constraintTop_toBottomOf="@id/user_avatar_title">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ava_boy" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_avatar_female"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="20dp"
        android:contentDescription="@string/ava_female_des"
        app:layout_constraintTop_toBottomOf="@id/user_avatar_title"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_gravity="center"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintLeft_toRightOf="@+id/card_avatar_male"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/gray">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ava_girl" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_avatar_female"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp">
        <TextView
            android:id="@+id/txt_information_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="Information"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Full Name"
            app:layout_constraintTop_toBottomOf="@+id/txt_information_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="22sp"
            android:layout_marginTop="1dp"/>

        <EditText
            android:id="@+id/edt_fullName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/rounded_rectangle"
            app:layout_constraintTop_toBottomOf="@+id/txt_fullName"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="Full Name"
            android:paddingHorizontal="20dp"
            android:autofillHints="fullName"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/txt_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender"
            app:layout_constraintTop_toBottomOf="@id/edt_fullName"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="22sp"
            android:layout_marginTop="10dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_gender"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="5dp"
            app:cardElevation="0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_rectangle">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="Male"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_gender_female"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_gender"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="5dp"
            app:cardElevation="0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_rectangle">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="Female"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/group_age"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/card_gender_female"
            android:background="@drawable/rounded_rectangle"
            android:padding="5dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Age"
                android:paddingHorizontal="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="22sp"/>

            <Spinner
                android:layout_width="180dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="@id/txt_age"
                app:layout_constraintTop_toTopOf="@id/txt_age"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/group_weight"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/group_age"
            android:background="@drawable/rounded_rectangle"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Weight |"
                android:paddingHorizontal="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="22sp"/>

            <EditText
                android:layout_width="180dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="@id/txt_weight"
                app:layout_constraintTop_toTopOf="@id/txt_weight"
                app:layout_constraintRight_toRightOf="parent"
                android:hint="Kilogram (KG)"
                android:textDirection="rtl"
                android:paddingStart="5dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/group_weight"
            android:background="@drawable/rounded_rectangle"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Height |"
                android:paddingHorizontal="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="22sp"/>

            <EditText
                android:layout_width="180dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="@id/txt_height"
                app:layout_constraintTop_toTopOf="@id/txt_height"
                app:layout_constraintRight_toRightOf="parent"
                android:hint="Centimeter (CM)"
                android:textDirection="rtl"

                android:paddingStart="5dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/form"
        android:layout_marginHorizontal="15dp"
        android:backgroundTint="@color/light_blue"
        android:text="Submit"
        app:cardCornerRadius="10dp"
        android:layout_marginVertical="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Submit"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>